--- a/hosted/style.css
+++ b/hosted/style.css
@@ -3,6 +3,7 @@ html, body {
   width: 100%;
   margin: 0;
   padding: 0;
+  font-family: sans-serif;
 }
 
 #top {
@@ -12,6 +13,12 @@ html, body {
 
 #top h1 {
   font-size: 2em;
+}
+
+#addRecipe {
+  width:80%;
+  margin: auto;
+  text-align: center;
 }
 
 #content {
