--- a/hosted/style.css
+++ b/hosted/style.css
@@ -10,17 +10,13 @@ hr {
 	width: 90%;
 }
 
-#addRecipe {
-  display: none;
-}
-
 #top {
   width: 100%;
   position: fixed;
   background-color: #fff;
   padding: 10px;
   padding-bottom: 5px;
-  /*box-shadow: 3px 3px 20px #000;*/
+  box-shadow: 3px 3px 20px #E8E8E8;
   z-index: 11;
   top:0;
 	left: 0;
@@ -36,6 +32,10 @@ hr {
   display: inline;
   color: #3a3c3d;
   margin: 5px;
+}
+
+.top-element label {
+  font-size: 16pt;
 }
 
 .top-element input{
@@ -54,18 +54,18 @@ hr {
 #top img {
   margin: auto;
   vertical-align: middle;
-  width: 5%;
-  /*filter: invert(100%);*/
-  transition-property: filter;
+  width: 45px;
+}
+
+.displayButton {
+  transition-property: color, filter;
   transition-duration: 0.25s;
 }
 
-#top img:hover {
-  filter: invert(50%);
-}
-
 .displayButton:hover {
+  filter: invert(50%);
   cursor: pointer;
+  color: #808080;
 }
 
 #top h1 {
@@ -73,9 +73,13 @@ hr {
 }
 
 #addRecipe {
-  width:80%;
+  width:90%;
+  display: none;
   margin: auto;
   text-align: center;
+  padding: 0px 5% 10px 5%;
+  box-shadow: 3px 3px 20px #E8E8E8;
+  border-bottom: 2px solid #E8E8E8;
 }
 
 #content {
@@ -83,3 +87,11 @@ hr {
   font-size: 2em;
   text-align: center;
 }
+
+/* MASONRY STYLING */
+.grid-item {
+  width: 20%;
+  border: 2px solid hsla(0, 0%, 0%, 0.5);
+}
+
+.grid-item--width2 { width: 40%; }
