--- a/hosted/style.css
+++ b/hosted/style.css
@@ -98,20 +98,73 @@ hr {
   font-size: 2em;
 }
 
-#addRecipe, #messageArea {
-  width:100%;
-  display: none;
-  margin: auto;
-  text-align: center;
-  padding: 0px 5% 10px 5%;
-  box-shadow: 3px 3px 20px #E8E8E8;
-  border-bottom: 2px solid #E8E8E8;
-}
-
 #content {
-  margin-top: 75px;
+  margin-top: 60px;
   font-size: 2em;
   text-align: center;
+}
+
+/* MODAL STYLING*/
+.modal-background {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 3; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  animation-name: fadeIn;
+  animation-duration: 0.4s
+}
+
+.modal-body {
+  padding: 2px 16px;
+}
+
+.modal-content {
+  position: fixed;
+  background-color: #fefefe;
+  padding: 0%;
+  margin: auto;
+  overflow: auto;
+  text-align: center;
+  border: 1px solid #888;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+  animation-name: animatetop;
+  animation-duration: 0.4s
+}
+
+.modal-content-large {
+  height: 620px;
+  width:76%;
+  top: 15%;
+  left: 12%;
+}
+
+.modal-content-small {
+  height: 180px;
+  width:56%;
+  top: 15%;
+  left: 22%;
+}
+
+.modal-header {
+  text-align: center;
+  padding: 2px 16px;
+  background-color: #5cb85c;
+  color: white;
+}
+
+@keyframes animatetop {
+  from {top: -300px; opacity: 0}
+  to {top: 15%; opacity: 1}
+}
+
+@keyframes fadeIn {
+  from {opacity: 0} 
+  to {opacity: 1}
 }
 
 /* REUSABLE ELEMENTS */
@@ -151,6 +204,7 @@ hr {
   margin-bottom: 10px;
   margin-right: 5px;
   margin-left: 5px;
+  overflow: hidden;
   transition-property: background, transform;
   transition-duration: 0.25s;
 }
