--- a/hosted/style.css
+++ b/hosted/style.css
@@ -1,6 +1,9 @@
 * { box-sizing: border-box; }
 
 html, body {
+  background-image: url("./leaves-pattern.png");
+	background-repeat: repeat;
+	background-attachment: fixed;
   height: 100%;
   width: 100%;
   margin: 0;
@@ -104,6 +107,11 @@ hr {
   text-align: center;
 }
 
+.load-gif img {
+  width: 99%;
+  height: 99%;
+}
+
 /* MODAL STYLING*/
 .modal-background {
   display: none; /* Hidden by default */
@@ -134,6 +142,18 @@ hr {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
   animation-name: animatetop;
   animation-duration: 0.4s
+}
+
+.modal-content .load-gif {
+  width: 150px;
+  height: 150px;
+  top: 45%;
+  left: 45%;
+  box-shadow: none;
+  overflow: hidden;
+  border-style: none;
+  animation: none;
+  background-color: rgba(0, 0, 0, 0);
 }
 
 .modal-content-large {
