--- a/hosted/style.css
+++ b/hosted/style.css
@@ -243,15 +243,14 @@ hr {
   clear: both;
 }
 
-.grid-item {
+.grid-sizer, .grid-item {
   float: left;
   color: #fff;
   background-image: url("./black_paper.png");
 	background-repeat: repeat;
-	background-attachment: fixed;
   border: 2px solid #E8E8E8;
   font-family: LindysDiner, Arial, 'Helvetica Neue', Helvetica, sans-serif;
-  width: 360px; /* Default size, can be adjusted */
+  width: 256px; /* Default size, will be adjusted dynamically based on recieved input */
   box-shadow: 3px 3px 20px rgb(145, 145, 145);
   border-color: hsla(0, 0%, 0%, 0.5);
   border-radius:15px;
@@ -261,19 +260,24 @@ hr {
   transition-duration: 0.25s;
 }
 
+.grid-sizer {
+  display: none;
+}
+
 .grid-item-inner-content {
+  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
   background: #fff;
   color: #000;
   display: none;
   overflow: auto;
 }
 
-.grid-item--width2 { width: 480px; }
-.grid-item--width3 { width: 640px; }
-.grid-item--width4 { width: 820px; }
+.grid-item--width2 { width: 512px; }
+/*.grid-item--width3 { width: 640px; }
+.grid-item--width4 { width: 820px; }*/
 
 .grid-item--selected {
-  width: 820px;
+  width: 512px;
   z-index: 2;
 }
 
