--- a/hosted/style.css
+++ b/hosted/style.css
@@ -243,7 +243,7 @@ hr {
   clear: both;
 }
 
-.grid-sizer, .grid-item {
+.grid-item {
   float: left;
   color: #fff;
   background-image: url("./black_paper.png");
@@ -255,6 +255,7 @@ hr {
   border-color: hsla(0, 0%, 0%, 0.5);
   border-radius:15px;
   margin-bottom: 10px;
+  word-wrap: break-word;
   overflow: hidden;
   transition-property: filter;
   transition-duration: 0.25s;
@@ -295,7 +296,7 @@ hr {
 }
 
 .grid-item:hover {
-  filter: opacity(.7);
+  filter: opacity(.9);
   border-color: white;
   cursor: pointer;
 }
