--- a/hosted/style.css
+++ b/hosted/style.css
@@ -15,6 +15,21 @@ hr {
 	width: 90%;
 }
 
+/*Input Styling*/
+/*Source - https://tympanus.net/codrops/2015/09/15/styling-customizing-file-inputs-smart-way/*/
+#imageField {
+  width: 0.1px;
+	height: 0.1px;
+	opacity: 0;
+	overflow: hidden;
+	position: absolute;
+	z-index: -1;
+}
+
+#imageField + label {
+  display: inline-block;
+}
+/*GENERAL STYLING*/
 #top {
   width: 100%;
   position: fixed;
@@ -114,13 +129,23 @@ hr {
   background-color: #55676A;
 }
 
+.button--label {
+  position: absolute;
+  left:47%;
+  top: 25%;
+  right:0;
+  font-size: 14pt;
+  margin-left:auto;
+  margin-right:auto;
+}
+
 #top h1 {
   font-family: LindysDiner, Arial, 'Helvetica Neue', Helvetica, sans-serif;
   font-size: 2em;
 }
 
 #content {
-  margin-top: 60px;
+  margin-top: 75px;
   font-size: 2em;
   text-align: center;
 }
@@ -140,12 +165,14 @@ hr {
   width: 100%; 
   height: 100%; 
   background-color: rgba(0,0,0,0.4); 
+  border-radius:15px;
   animation-name: fadeIn;
   animation-duration: 0.4s
 }
 
 .modal-body {
   padding: 2px 16px;
+  border-radius:15px;
 }
 
 .modal-content {
@@ -261,10 +288,6 @@ hr {
   transition-duration: 0.25s;
 }
 
-.grid-sizer {
-  display: none;
-}
-
 .grid-item-inner-content {
   font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
   background: #fff;
@@ -274,8 +297,6 @@ hr {
 }
 
 .grid-item--width2 { width: 512px; }
-/*.grid-item--width3 { width: 640px; }
-.grid-item--width4 { width: 820px; }*/
 
 .grid-item--selected {
   width: 512px;
