--- a/hosted/style.css
+++ b/hosted/style.css
@@ -11,6 +11,11 @@ html, body {
   font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
 }
 
+p, ul, ol {
+  font-size: 12pt;
+  margin: 2% 0px; 
+}
+
 hr {
 	width: 90%;
 }
@@ -53,9 +58,24 @@ hr {
   width: 50%;
 }
 
+.form-split label {
+  display: block;
+}
+
 .form-split-element {
   display: block;
   margin-bottom: 15px;
+}
+
+.small-button--label {
+  position: relative;
+  width: 10px;
+  height: 10px;
+  left: 22%;
+  bottom: 33px;
+  font-size: 14pt;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .top-element, .top-element-right {
@@ -122,6 +142,11 @@ hr {
 
 .button--close {
   background-color: #303F42;
+}
+
+.button--small {
+  text-align: center;
+  width: 25px;
 }
 
 .button--close:hover {
@@ -225,6 +250,7 @@ hr {
 }
 
 .modal-footer {
+  width: 100%;
   padding: 2px 8px;
   text-align: center;
 }
@@ -294,6 +320,11 @@ hr {
   color: #000;
   display: none;
   overflow: auto;
+}
+
+.grid-item-inner-content h3 {
+  margin-top: 10px;
+  font-size: 18pt;
 }
 
 .grid-item--width2 { width: 512px; }
